// Docs: https://dbml.dbdiagram.io/docs

Table users {
  user_id "INT UNSIGNED" [primary key, increment]
  username VARCHAR(32) [not null, unique]
  email VARCHAR(128) [not null, unique]
  password VARCHAR(256) [not null]
  display_name VARCHAR(32)
  games_played "INT UNSIGNED" [default: 0]
  lifetime_score INT [default: 0]
  private_lifetime_score BOOLEAN [default: FALSE]
  display_city VARCHAR(64)
  display_region VARCHAR(64)
  display_country VARCHAR(64)
  datetime_created DATETIME [default: `now()`]
}

Table friends {
  user_1_id "INT UNSIGNED" [primary key]
  user_2_id "INT UNSIGNED" [primary key]
  datetime_created DATETIME [default: `now()`]
}

Table friend_requests {
  from_user_id "INT UNSIGNED" [primary key]
  to_user_id "INT UNSIGNED" [primary key]
  datetime_created DATETIME [default: `now()`]
}

Table games {
  game_id "INT UNSIGNED" [primary key, increment]
  gamemode_id "INT UNSIGNED" [not null]
  called_ace "TINYINT UNSIGNED"
  good_guys_win BOOLEAN [not null]
  winning_score "TINYINT UNSIGNED" [not null]
  datetime_created DATETIME [default: `now()`]
}

Table gamemodes {
  gamemode_id "TINYINT UNSIGNED" [primary key, increment]
  gamemode_code VARCHAR(8) [not null, unique]
  player_count "TINYINT UNSIGNED" [not null]
  blind_size "TINYINT UNSIGNED"
  leaster BOOLEAN
}

Table players {
  user_id "INT UNSIGNED" [primary key]
  game_id "INT UNSIGNED" [primary key]
  player_index "TINYINT UNSIGNED" [not null]
  good_guy BOOLEAN [not null, default: FALSE]
  picker BOOLEAN [not null, default: FALSE]
}

Table rounds {
  game_id "INT UNSIGNED" [primary key]
  round_id "TINYINT UNSIGNED" [primary key, increment]
  round_index "TINYINT UNSIGNED" [not null]
  winner "INT UNSIGNED" [not null]
  points_won "TINYINT UNSIGNED" [not null]
}

Table turns {
  game_id "INT UNSIGNED" [primary key]
  round_id "TINYINT UNSIGNED" [primary key]
  turn_id "TINYINT UNSIGNED" [primary key, increment]
  turn_index "TINYINT UNSIGNED" [not null]
  user_id "INT UNSIGNED" [not null]
  card_id "TINYINT UNSIGNED" [not null]
}

Table cards {
  card_id "TINYINT UNSIGNED" [primary key] // code
  suit CHAR(1) [not null]
  power "TINYINT UNSIGNED" [not null] // rank
  points "TINYINT UNSIGNED" [not null] // value
}

Ref: games.gamemode_id < gamemodes.gamemode_id
Ref: games.called_ace < cards.card_id

Ref: players.user_id < users.user_id
Ref: players.game_id < games.game_id

Ref: friends.user_1_id < users.user_id
Ref: friends.user_2_id < users.user_id

Ref: friend_requests.from_user_id < users.user_id
Ref: friend_requests.to_user_id < users.user_id

Ref: rounds.game_id < games.game_id
Ref: rounds.winner < players.user_id

Ref: turns.game_id < rounds.game_id
Ref: turns.round_id < rounds.round_id
Ref: turns.user_id < players.user_id
Ref: turns.card_id < cards.card_id 
